# public-demos

./: .clang-format  LICENSE.txt  README.md
Example2D3DRegistration/: CMakeLists.txt  Custom2D3DRegistrationInitialization.cpp  Custom2D3DRegistrationInitialization.h  Example2D3DRegistrationAlgorithm.cpp  Example2D3DRegistrationAlgorithm.h  Example2D3DRegistrationController.cpp  Example2D3DRegistrationController.h  Example2D3DRegistrationFactory.cpp  Example2D3DRegistrationFactory.h  Example2D3DRegistrationPlugin.cpp  Example2D3DRegistrationPlugin.h  README.md
ExampleITK/: CMakeLists.txt  ITK.cpp  ITK.h  ITKCannyEdgeAlgorithm.cpp  ITKCannyEdgeAlgorithm.h  ITKFactory.cpp  ITKFactory.h  ITKPlugin.cpp  ITKPlugin.h  README.md
ExampleMachineLearningInference/: CMakeLists.txt  MachineLearningInferenceFactory.cpp  MachineLearningInferenceFactory.h  MachineLearningInferencePlugin.cpp  MachineLearningInferencePlugin.h  README.md  RunPretrainedModelAlgorithm.cpp  RunPretrainedModelAlgorithm.h  demo_model.yaml  demo_model_traced.pt  generate_demo_model.py
ExampleMainWindowBaseApplication/: CMakeLists.txt  DemoMainWindowBase.cpp  DemoMainWindowBase.h  README.md
ExampleOpenCV/: CMakeLists.txt  CannyEdgeAlgorithm.cpp  CannyEdgeAlgorithm.h  OpenCVFactory.cpp  OpenCVFactory.h  OpenCVPlugin.cpp  OpenCVPlugin.h  README.md
ExamplePlugin/: CMakeLists.txt  DemoAlgorithm.cpp  DemoAlgorithm.h  DemoController.cpp  DemoController.h  DemoController.ui  DemoFactory.cpp  DemoFactory.h  DemoPlugin.cpp  DemoPlugin.h  README.md
ExampleStandaloneApplication/: CMakeLists.txt  DemoExecutable.cpp  DemoExecutable.h  README.md
QMLRendererDemo/: CMakeLists.txt  ImFusionClient.cpp  ImFusionClient.h  ImFusionFboView.cpp  ImFusionFboView.h  MainWindow.cpp  MainWindow.h  README.md  main.cpp  main.qml  standalone.qrc
SlicerExtension/: CMakeLists.txt  README.md
SlicerExtension/ImFusionAlgorithmExample/: CMakeLists.txt  qSlicerImFusionAlgorithmExampleModule.cxx  qSlicerImFusionAlgorithmExampleModule.h  qSlicerImFusionAlgorithmExampleModuleWidget.cxx  qSlicerImFusionAlgorithmExampleModuleWidget.h
SlicerExtension/ImFusionAlgorithmExample/Logic/: CMakeLists.txt  vtkSlicerImFusionAlgorithmExampleLogic.cxx  vtkSlicerImFusionAlgorithmExampleLogic.h
SlicerExtension/ImFusionAlgorithmExample/Resources/: qSlicerImFusionAlgorithmExampleModule.qrc
SlicerExtension/ImFusionAlgorithmExample/Resources/UI/: qSlicerImFusionAlgorithmExampleModuleWidget.ui
TractographyPlugin/: CMakeLists.txt  FiberData.cpp  FiberData.h  FiberDataDisplayHandler.cpp  FiberDataDisplayHandler.h  FiberDataIoAlgorithm.cpp  FiberDataIoAlgorithm.h  FiberDataRenderOptionsWidget.cpp  FiberDataRenderOptionsWidget.h  FiberDataRenderer.cpp  FiberDataRenderer.h  README.md  Resources.qrc  TractographyPlugin.cpp  TractographyPlugin.h
TractographyPlugin/data/: case1_corpus_callosum.trk  case1_pyramidal_tract.trk
TractographyPlugin/shaders/: FiberDataRenderer.frag  FiberDataRenderer.geom  FiberDataRenderer.vert
